[package]
name = "updoot-mws"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["macros", "io-util", "sync"] }
mws = { version = "0.2.1", git = "https://github.com/reezey/mws/" }
urlencoding = "2.1"
config = { version = "0.14", features = ["toml"] }
byte-unit = "5.1"
once_cell = "1.20"
rand = "0.8"